# LexiconBuddy

./: .gitmodules
binary_search/: .gitignore  Cargo.toml
binary_search/src/: lib.rs  main.rs
binary_search/src/app/: dict_screen.rs  mod.rs  screen.rs
binary_search/src/dict/: dict.rs  ecdict.rs  mod.rs
binary_search/src/gui/: dict_scr.rs  gui.rs  mod.rs
binary_search/src/input_device/: input.rs  input_mode.rs  mod.rs
binary_search/src/logic/: calculator.rs  mod.rs
binary_search/src/logic/dict/: dict.rs  ecdict.rs  mod.rs
dict_preprocess/: .gitignore
dict_preprocess/ecdict/: ecdict.py
