[package]
name = "binary_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kalk = { version = "3.0", default-features = false}

thiserror = "1.0"
lazy_static = "1.4.0"


lvgl = { version = "0.6.2", features = ["alloc"], optional = true }
lvgl-sys = { version = "0.6.2", optional = true }
cty = { version = "0.2.2", optional = true }
embedded-graphics = { version = "0.7.1", optional = true }
cstr_core = { version = "0.2.6", default-features = false, features = ["alloc"], optional = true  }
bitflags = { version = "2.3.2", optional = true }
paste = { version = "1.0.12", optional = true }
ctor = { version = "0.2.2", optional = true }
embedded-graphics-simulator = { version = "0.3.0", optional = true }


[features]
default = ["win_sim", "use_lvgl"]
use_lvgl = ["lvgl", "lvgl-sys", "embedded-graphics", "cstr_core", "bitflags", "paste", "ctor", "embedded-graphics-simulator"]
win_sim = []
embedded = []
